--- a/views/index.hbs
+++ b/views/index.hbs
@@ -17,7 +17,7 @@
                             The quieter you become the more you are able to hear.
                         </p>
                         <button class="btn btn-outline-danger btn-shadow px-3 my-2 ml-0 ml-sm-1 text-left typewriter"
-                            onclick="(function(){window.location.href='http://44.211.138.118:8000/login'})();">
+                            onclick="(function(){window.location.href='#'})();">
                             <h4>Login</h4>
                         </button>
                         <button class="btn btn-outline-danger btn-shadow px-3 my-2 ml-0 ml-sm-1 text-left typewriter"
@@ -27,7 +27,7 @@
 
                         </button>
                         <button class="btn btn-outline-danger btn-shadow px-3 my-2 ml-0 ml-sm-1 text-left typewriter"
-                            onclick="(function(){window.location.href='http://44.211.138.118:8000/register'})();">
+                            onclick="(function(){window.location.href='#'})();">
                             <h4>Register</h4>
                         </button>
                     </div>
