--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -36,7 +36,7 @@
         <div class="navbar-dark text-white">
             <div class="container">
                 <nav class="navbar px-0 navbar-expand-lg navbar-dark">
-                    <button class="navbar-toggler" type="button" data-toggle="collapse"
+                    <button style="background-color: #c91919 !important;" class="navbar-toggler" type="button" data-toggle="collapse"
                         data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false"
                         aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
