--- a/views/scoreboard.hbs
+++ b/views/scoreboard.hbs
@@ -8,7 +8,9 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.3/Chart.min.js"></script>
 
 
-
+<script>
+    var count=0
+</script>
 <div class="jumbotron bg-transparent mb-0 pt-3 radius-0">
     <div class="container">
         <div class="row">
@@ -42,40 +44,37 @@
                         <tr>
                             <th>#</th>
                             <th>Team Name</th>
-                            <th># Challenges Solved</th>
-                            <th>Total Time Taken</th>
+                            <th>No.of Flags Captured</th>
                             <th>Score</th>
                         </tr>
                     </thead>
                     <tbody>
+                        
+                        {{#each jsonData}}
                         <tr>
-                            <th scope="row">1</th>
-                            <td>liveoverflow</td>
-                            <td>8</td>
-                            <td>42:59</td>
-                            <td>2540</td>
+                            <th id="pos" scope="row">{{pos}}</th>
+                            <td>{{team}}</td>
+                            <td id="count-{{team}}"></td>
+                            <td>{{score}}</td>
                         </tr>
-                        <tr>
-                            <th scope="row">2</th>
-                            <td>CR007</td>
-                            <td>6</td>
-                            <td>44:59</td>
-                            <td>1900</td>
-                        </tr>
-                        <tr>
-                            <th scope="row">3</th>
-                            <td>anonymous</td>
-                            <td>4</td>
-                            <td>40:00</td>
-                            <td>650</td>
-                        </tr>
-                        <tr>
-                            <th scope="row">4</th>
-                            <td>ashawe</td>
-                            <td>5</td>
-                            <td>40:10</td>
-                            <td>550</td>
-                        </tr>
+                        <script>
+
+                            {{#each this.taskStats}}
+                           
+                            count = count+1
+                            {{/each}}
+                          
+                        </script>
+                           
+                            <script>
+                                document.getElementById("count-{{team}}").innerHTML = count;
+                                 count=0
+                            </script>
+                             {{/each}}
+                         <script>
+                          
+                         </script>
+                        
                     </tbody>
                 </table>
             </div>
