--- a/views/baseLayout.hbs
+++ b/views/baseLayout.hbs
@@ -43,9 +43,10 @@
                     <div class="navbar-nav ml-auto">
                         <a href="/" class="p-3 text-decoration-none text-light bold">Home</a>
                         <a href="about" class="p-3 text-decoration-none text-light bold">About</a>
+                        <a href="challenge" class="p-3 text-decoration-none text-light bold">Challenges</a>
                         <a href="hackerboard" class="p-3 text-decoration-none text-light bold">Hackerboard</a>
-                        <a href="http://44.211.138.118:8000/login" class="p-3 text-decoration-none text-light bold">Login</a>
-                        <a href="http://44.211.138.118:8000/register" class="p-3 text-decoration-none text-light bold">Register</a>
+                        <a href="/login" class="p-3 text-decoration-none text-light bold">Login</a>
+                        <a href="/register" class="p-3 text-decoration-none text-light bold">Register</a>
                     </div>
                 </div>
             </nav>
